--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <script>
     MathJax = {
-      tex: {inlineMath: [['$', '$'], ['\\(', '\\)']]}
+      tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] }
     };
-    </script>
+  </script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/babel-polyfill/7.12.1/polyfill.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js"></script>
 </body>
 
 </html>
